# toy

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .renovaterc.json  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  delete-untagged-packages.yml  readthedocs-preview.yml  release.yml  renovate.yml  semantic-release.yml
docs/: conf.py  index.md
docs/advanced/: dev-containers.md
docs/api/: settings.md
docs/cli/: index.md
docs/development/: git-workflow.md  tests.md
docs/management/: init.md  release.md  settings.md
src/xytoy/: cli.py  settings.py
src/xytoy/c/: __init__.py
src/xytoy/cache/: __init__.py
src/xytoy/nb/: __init__.py
tests/: cache_test.py  cli_test.py  pkg_test.py  settings_test.py
